# lind-wasm-example-grates

./: .gitignore  Dockerfile  Makefile  README.md
c-grates/geteuid-grate/: build.conf
c-grates/imfs-grate/: .gitignore  build.conf  compile_grate.sh
c-grates/seccomp-grate/: README.md  compile_grate.sh
c-grates/strace-grate/: README.md  compile_grate.sh
c-grates/witness-grate/: README.md  compile_grate.sh
demos/fs-isolation/: README.md  build.sh  fs_isolation_test.c  run.sh
demos/least-privilege/: README.md  build.sh  least_privilege_test.c  run.sh  seccomp_fs_deny.conf
demos/mmap-shared-tmp/: Makefile  README.md  build.sh  dsm_shared_test.c  run.sh
demos/mtls-propagation/: README.md  build.sh  mtls_propagation_test.c  run.sh
demos/rate-limit-clamping/: README.md  build.sh  ratelimit_demo.c  ratelimit_demo.cfg  run.sh
demos/write-filter-ordering/: README.md  build.sh  run.sh  write_filter_ordering_test.c
examples/block_sys_write-grate/: Cargo.toml  README.md
examples/chroot-grate-rs/: Cargo.toml
examples/devnull-grate-rs/: Cargo.toml
examples/fdtables-test-grate/: Cargo.toml
examples/fdtables-test-grate/src/: main.rs
examples/fdtables-test-grate/test/: fdtables_test.c
examples/geteuid-grate/: build.conf  compile_grate.sh
examples/geteuid-grate-rs/: Cargo.toml
examples/imfs-grate/: README.md  build.conf  compile_grate.sh  imfs.c  imfs_grate.c
examples/imfs-grate-rs/: Cargo.toml
examples/ipc-grate/: README.md
examples/mTLS-grate-rs/: Cargo.toml  README.md  setup.sh
examples/mTLS-grate-rs/src/: .main.rs  handlers.rs  main.rs
examples/mTLS-grate-rs/test/: mtls_client_test.c  mtls_test.c  setup.sh
examples/memory-test-grate/: Cargo.toml
examples/memory-test-grate/src/: main.rs
examples/memory-test-grate/test/: memory_test.c
examples/namespace-grate-rs/: Cargo.toml
rust-grates/fd-translate-grate/: Cargo.toml  log
rust-grates/fd-translate-grate/src/: main.rs
rust-grates/fd-translate-grate/test/: fd_translate_test.c  fd_translate_test.cwasm  fd_translate_test.wasm
rust-grates/mtls-grate/: Cargo.toml  README.md
rust-grates/mtls-grate/src/: handlers.rs  main.rs
rust-grates/mtls-grate/test/: mtls_server_test.c  test.sh
scripts/: cloudbuild.yaml
strace_grate/: make_glibc_and_sysroot.sh  strace.c  strace_grate.c
test/: grates_test.toml  run_tests.sh
tools/: README.md  compile.sh  magic.ctmpl  magic.tmpl  run.sh  syscalls  wand.py
(+287 files in other folders)
