[package]
name = "fd-translate-grate"
version = "0.1.0"
edition = "2024"

[dependencies]
grate-rs = { path = "../../lib/grate-rs" }
fdtables = { git = "https://github.com/Lind-Project/lind-wasm", branch = "main", subdir = "src/fdtables", default-features = false, features = ["muthashmax"] }
libc = "0.2"
